fix z-index problems

--- a/public/css/default.css
+++ b/public/css/default.css
@@ -150,7 +150,7 @@ dd#submit-element {
 }
 
 .alert {
-    z-index: 3;
+    z-index: 5;
     width: 600px !important;
     opacity: 0;
     position: fixed;
@@ -234,7 +234,7 @@ ul.ui-autocomplete {
     box-shadow: 0px 1px 5px #3a3e41;
     border: 0px;
 
-    z-index: 30;
+    z-index: 30 !important;
 }
 
 ul.ui-autocomplete li {
