--- a/public/css/resultset.css
+++ b/public/css/resultset.css
@@ -4,7 +4,7 @@
     min-height: 60px;
     margin: 10px;
     position: relative;
-    z-index: 20;
+    z-index: 25 !important;
     -webkit-transition: background 300ms ease-in 0ms;
     -moz-transition: background 300ms ease-in 0ms;
     -o-transition: background 300ms ease-in 0ms;
